--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,16 @@ bin-release/
 
 # Other files and folders
 .settings/
-
+env/
+__pycache__/
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
+*.sqlite3
+*.mp3
+*.mp4
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
